chore(deploy): add fresh install scripts and docs

--- a/deploy/nginx/gestion_de_pedidos.conf
+++ b/deploy/nginx/gestion_de_pedidos.conf
@@ -130,6 +130,33 @@ server {
   # Max upload size if needed (match backend limits)
   client_max_body_size 20M;
 
+  # phpMyAdmin (secured)
+  location /phpmyadmin {
+    alias /usr/share/phpmyadmin/;
+    index index.php;
+    auth_basic "Restricted";
+    auth_basic_user_file /etc/nginx/.pma_passwd;
+  }
+
+  location ~ ^/phpmyadmin/(.+\.php)$ {
+    alias /usr/share/phpmyadmin/$1;
+    include snippets/fastcgi-php.conf;
+    # Ajusta la versión de PHP-FPM instalada en tu VPS (php8.3-fpm o php8.2-fpm, etc.)
+    fastcgi_pass unix:/run/php/php8.3-fpm.sock;
+
+    auth_basic "Restricted";
+    auth_basic_user_file /etc/nginx/.pma_passwd;
+  }
+
+  location ~* ^/phpmyadmin/(.+\.(css|js|png|jpg|jpeg|gif|ico|svg|ttf|woff|woff2))$ {
+    alias /usr/share/phpmyadmin/$1;
+    access_log off;
+    expires 30d;
+
+    auth_basic "Restricted";
+    auth_basic_user_file /etc/nginx/.pma_passwd;
+  }
+
   # Logs
   access_log /var/log/nginx/gestion_de_pedidos.access.log;
   error_log  /var/log/nginx/gestion_de_pedidos.error.log;
